# jeru

./: .gitignore  CLAUDE.md  Cargo.toml  PROJECT_SCOPE.md  README.md  devenv.nix  flake.nix
nix/: hm-module.nix  package.nix
src/: add.rs  cache.rs  config.rs  constants.rs  error.rs  journal.rs  launch.rs  lib.rs  main.rs  manifest.rs  mcp.rs  obsidian.rs  project.rs  readme.rs  remote.rs  roadmap.rs  settings.rs  template.rs  validate.rs  vscode.rs
src/remote/: launch.rs  mod.rs  sync.rs
src/session/: conflicts.rs  control.rs  mod.rs  start.rs  state.rs
templates/: CLAUDE.md.j2
tests/: integration.rs
tests/common/: mod.rs
tests/fixtures/projects/alpha/: project.yml
tests/fixtures/projects/beta/: CLAUDE.md  project.yml
