[package]
name = "jeru"
version = "0.1.0"
edition = "2024"

[lib]
name = "jeru"
path = "src/lib.rs"

[[bin]]
name = "jeru"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
minijinja = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
thiserror = "2.0"
