[package]
name = "jeru"
version = "0.4.24"
edition = "2024"

[lib]
name = "jeru"
path = "src/lib.rs"

[[bin]]
name = "jeru"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
minijinja = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
clap_complete = { version = "4", features = ["unstable-dynamic"] }
dialoguer = "0.11"
figment = { version = "0.10", features = ["env"] }
thiserror = "2.0"
libc = "0.2"
vt100 = "0.16.2"

[dev-dependencies]
tempfile = "3"
